--- a/GIT_contributions.html
+++ b/GIT_contributions.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="my_style.css">
+    <link rel="stylesheet" type="text/css" href="scripts/my_style.css">
     
     <body onload=loadFun()>
 
@@ -46,7 +46,7 @@
             
     </body>
     <script>
-        src="my_script.js"
+        src="scripts/my_script.js"
     </script>
 </head>
 
